--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,19 @@
 @import "tailwindcss";
 
+*, html{
+    scroll-behavior: smooth !important;
+}
 
 @theme {
+  /* Fonts */
   --font-ovo: 'Ovo', serif;
+
+  /* Colors */
+  --color-lightHover: #fcf4ff;
+  --color-darkHover: #2a004a;
+  --color-darkTheme: #11001f;
+
+  /* Box Shadow */
+  --shadow-black: 4px 4px 0 #000;
+  --shadow-white: 4px 4px 0 #fff;
 }
