--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @theme {
   /* Fonts */
-  --font-ovo: 'Ovo', serif;
+  --font-roboto: 'Roboto', sans-serif;
 
   /* Colors */
   --color-lightHover: #fcf4ff;
