--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+  /* dark theme */
+  @custom-variant dark (&:where(.dark, .dark *));
+  
 *, html{
     scroll-behavior: smooth !important;
 }
@@ -16,4 +19,7 @@
   /* Box Shadow */
   --shadow-black: 4px 4px 0 #000;
   --shadow-white: 4px 4px 0 #fff;
+
+
+
 }
