--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   /* Colors */
   --color-lightHover: #fcf4ff;
   --color-darkHover: #2a004a;
-  --color-darkTheme:#121212;
+  --color-darkTheme:#2B2C35;
 
   /* Box Shadow */
   --shadow-black: 4px 4px 0 #000;
